--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,6 +17,17 @@ jobs:
       - checkout
       - run: mvn -s .circleci/settings.xml -B clean install -Dmaven.javadoc.skip=true -B -V -Dspring.profiles.active=default
       - run: mvn package org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=WJ-van-Hoek_PANDORA
+      
+  update-dependencies:
+    docker:
+        - image: maven:3.8.4-openjdk-17
+    working_directory: ~/pandora
+    steps:
+        - checkout
+
+        - run:
+            name: update-dependencies
+            command: bash .circleci/bash-update-dependencies.bash      
 
 workflows:
   build-and-test:
