--- a/pandora-calculation-services/pom.xml
+++ b/pandora-calculation-services/pom.xml
@@ -12,15 +12,17 @@
 	<name>pandora-calculation-services</name>
 
 	<properties>
+		<commons-math3.version>3.6.1</commons-math3.version>
 		<mvn-checkstyle-plugin.version>3.1.1</mvn-checkstyle-plugin.version>
 		<spring-boot.repackage.skip>true</spring-boot.repackage.skip>
+		<spring-parent-pom.version>0.0.5</spring-parent-pom.version>
 	</properties>
 
 	<dependencies>
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-math3</artifactId>
-			<version>3.6.1</version>
+			<version>${commons-math3.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.pandora</groupId>
@@ -30,7 +32,7 @@
 		<dependency>
 			<groupId>com.general</groupId>
 			<artifactId>spring-parent-pom</artifactId>
-			<version>0.0.5</version>
+			<version>${spring-parent-pom.version}</version>
 			<type>pom</type>
 		</dependency>
 		<dependency>
