--- a/pandora-calculation-utilities/pom.xml
+++ b/pandora-calculation-utilities/pom.xml
@@ -9,11 +9,16 @@
 	</parent>
 	<artifactId>pandora-calculation-utilities</artifactId>
 	<name>pandora-calculation-utilities</name>
+
+	<properties>
+		<commons-cli.version>1.6.0</commons-cli.version>
+	</properties>
+
 	<dependencies>
 		<dependency>
 			<groupId>commons-cli</groupId>
 			<artifactId>commons-cli</artifactId>
-			<version>1.6.0</version>
+			<version>${commons-cli.version}</version>
 		</dependency>
 	</dependencies>
 
