PANDORA-166: add workflow

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,5 +33,9 @@ workflows:
   build-and-test:
     jobs:
       - build
-
+  
+  update-dependencies:
+    when: << pipeline.parameters.update-dependencies >>
+    jobs:
+      - update-dependencies
 
