PANDORA-166: exclude normal build and test

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,6 +36,8 @@ jobs:
 
 workflows:
   build-and-test:
+    when:
+      not: << pipeline.parameters.update-dependencies >>  
     jobs:
       - build
   
