add context to config.yml

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,12 +39,14 @@ workflows:
     when:
       not: << pipeline.parameters.update-dependencies >>  
     jobs:
-      - build
+      - build:
+          context:
+              - build-context
   
   update-dependencies:
     when: << pipeline.parameters.update-dependencies >>
     jobs:
       - update-dependencies:
           context:
-              - update-dependencies
+              - update-dependencies-context
 
