add context to config.yml

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,7 +41,7 @@ workflows:
     jobs:
       - build:
           context:
-              - build-context
+              - deploy-context
   
   update-dependencies:
     when: << pipeline.parameters.update-dependencies >>
