--- a/pom.xml
+++ b/pom.xml
@@ -1,119 +1,155 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.pandora</groupId>
-	<artifactId>PANDORA</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+    <groupId>com.pandora</groupId>
+    <artifactId>PANDORA</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
 
-	<modules>
-		<module>pandora-calculation-utilities</module>
-		<module>pandora-calculation-repositories</module>
-		<module>pandora-calculation-services</module>
-		<module>pandora-calculation-rest-api</module>
-	</modules>
+    <modules>
+        <module>pandora-calculation-utilities</module>
+        <module>pandora-calculation-repositories</module>
+        <module>pandora-calculation-services</module>
+        <module>pandora-calculation-rest-api</module>
+    </modules>
 
-	<packaging>pom</packaging>
+    <packaging>pom</packaging>
 
-	<name>pandora</name>
-	<description>PANDORA - Crack the Box: Understanding Riverine Chemistry</description>
+    <name>pandora</name>
+    <description>PANDORA - Crack the Box: Understanding Riverine Chemistry</description>
 
-	<properties>
-		<docker-utils.version>0.0.6</docker-utils.version>
-		<json-utils.version>0.0.6</json-utils.version>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<maven.compiler.source>17</maven.compiler.source>
-		<maven.compiler.target>17</maven.compiler.target>
-		<object-utils.version>0.0.7</object-utils.version>
-		<parent-pom.version>0.2.2</parent-pom.version>
-		<sonar.organization>wj-van-hoek</sonar.organization>
-		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
-		<sonar.coverage.jacoco.xmlReportPaths>
-			./target/site/jacoco-aggregate/jacoco.xml
-		</sonar.coverage.jacoco.xmlReportPaths>
-	</properties>
+    <properties>
+        <docker-utils.version>0.0.6</docker-utils.version>
+        <json-utils.version>0.0.6</json-utils.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <maven-checkstyle-plugin.version>3.4.0</maven-checkstyle-plugin.version>
+        <maven-javadoc-plugin.version>3.7.0</maven-javadoc-plugin.version>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
+        <object-utils.version>0.0.7</object-utils.version>
+        <parent-pom.version>0.2.2</parent-pom.version>
+        <project.javadoc.outputdir>./docs/</project.javadoc.outputdir>
+        <sonar.organization>wj-van-hoek</sonar.organization>
+        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+        <sonar.coverage.jacoco.xmlReportPaths>
+            ./target/site/jacoco-aggregate/jacoco.xml
+        </sonar.coverage.jacoco.xmlReportPaths>
+    </properties>
 
-	<repositories>
-		<repository>
-			<id>central</id>
-			<name>Central Repository</name>
-			<url>https://repo.maven.apache.org/maven2</url>
-		</repository>
-		<repository>
-			<id>github-parent-pom</id>
-			<url>https://maven.pkg.github.com/WJ-van-Hoek/parent-pom</url>
-		</repository>
-		<repository>
-			<id>github-spring-parent-pom</id>
-			<url>https://maven.pkg.github.com/WJ-van-Hoek/spring-parent-pom</url>
-		</repository>		
-		<repository>
-			<id>github-utils</id>
-			<url>https://maven.pkg.github.com/WJ-van-Hoek/utils</url>
-		</repository>
-	</repositories>
+    <repositories>
+        <repository>
+            <id>github-parent-pom</id>
+            <url>https://maven.pkg.github.com/WJ-van-Hoek/parent-pom</url>
+        </repository>
+        <repository>
+            <id>github-spring-parent-pom</id>
+            <url>https://maven.pkg.github.com/WJ-van-Hoek/spring-parent-pom</url>
+        </repository>
+        <repository>
+            <id>github-utils</id>
+            <url>https://maven.pkg.github.com/WJ-van-Hoek/utils</url>
+        </repository>
+        <repository>
+            <id>central</id>
+            <name>Central Repository</name>
+            <url>https://repo.maven.apache.org/maven2</url>
+        </repository>
+    </repositories>
 
-	<dependencies>
-		<dependency>
-			<groupId>com.general</groupId>
-			<artifactId>parent-pom</artifactId>
-			<version>${parent-pom.version}</version>
-			<type>pom</type>
-		</dependency>
-		<dependency>
-			<groupId>com.general.utils</groupId>
-			<artifactId>docker-utils</artifactId>
-			<version>${docker-utils.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>com.general.utils</groupId>
-			<artifactId>object-utils</artifactId>
-			<version>${object-utils.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>com.general.utils</groupId>
-			<artifactId>json-utils</artifactId>
-			<version>${json-utils.version}</version>
-		</dependency>
-	</dependencies>
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>com.general</groupId>
+                <artifactId>parent-pom</artifactId>
+                <version>${parent-pom.version}</version>
+                <type>pom</type>
+            </dependency>
+            <dependency>
+                <groupId>com.general.utils</groupId>
+                <artifactId>docker-utils</artifactId>
+                <version>${docker-utils.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.general.utils</groupId>
+                <artifactId>object-utils</artifactId>
+                <version>${object-utils.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.general.utils</groupId>
+                <artifactId>json-utils</artifactId>
+                <version>${json-utils.version}</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-checkstyle-plugin</artifactId>
-				<executions>
-					<execution>
-						<id>validate</id>
-						<phase>validate</phase>
-						<configuration>
-							<configLocation>./pandora-style/pandora_checks.xml</configLocation>
-							<suppressionsLocation>
-								./pandora-style/suppressions.xml</suppressionsLocation>
-							<failOnViolation>true</failOnViolation>
-							<includeTestSourceDirectory>true</includeTestSourceDirectory>
-						</configuration>
-						<goals>
-							<goal>check</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-javadoc-plugin</artifactId>
-				<configuration>
-					<reportOutputDirectory>
-						${project.basedir}/../docs/pandora-calculation-utilities</reportOutputDirectory>
-					<sourcepath>${project.basedir}/src/main/java</sourcepath>
-					<doclint>none</doclint>
-				</configuration>
-			</plugin>			
-		</plugins>
-	</build>
+    <dependencies>
+        <dependency>
+            <groupId>com.general</groupId>
+            <artifactId>parent-pom</artifactId>
+            <type>pom</type>
+        </dependency>
+        <dependency>
+            <groupId>com.general.utils</groupId>
+            <artifactId>docker-utils</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.general.utils</groupId>
+            <artifactId>object-utils</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.general.utils</groupId>
+            <artifactId>json-utils</artifactId>
+        </dependency>
+    </dependencies>
 
-
+    <build>
+	    <pluginManagement>
+	        <plugins>
+	            <plugin>
+	                <groupId>org.apache.maven.plugins</groupId>
+	                <artifactId>maven-checkstyle-plugin</artifactId>
+	                <version>${maven-checkstyle-plugin.version}</version>
+	                <configuration>
+	                    <configLocation>./pandora-style/pandora_checks.xml</configLocation>
+	                    <suppressionsLocation>./pandora-style/suppressions.xml</suppressionsLocation>
+	                    <failOnViolation>true</failOnViolation>
+	                    <includeTestSourceDirectory>true</includeTestSourceDirectory>
+	                </configuration>
+	                <executions>
+	                    <execution>
+	                        <id>validate</id>
+	                        <phase>validate</phase>
+	                        <goals>
+	                            <goal>check</goal>
+	                        </goals>
+	                    </execution>
+	                </executions>
+	            </plugin>
+	            <plugin>
+	                <groupId>org.apache.maven.plugins</groupId>
+	                <artifactId>maven-javadoc-plugin</artifactId>
+	                <version>${maven-javadoc-plugin.version}</version>
+	                <configuration>
+	                    <reportOutputDirectory>${project.javadoc.outputdir}</reportOutputDirectory>
+	                    <sourcepath>${project.basedir}/src/main/java</sourcepath>
+	                    <doclint>none</doclint>
+	                </configuration>
+	            </plugin>
+	        </plugins>
+	    </pluginManagement>
+    		
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-checkstyle-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+            </plugin>            
+        </plugins>
+    </build>
 </project>
+
