--- a/pom.xml
+++ b/pom.xml
@@ -22,15 +22,24 @@
 	<properties>
 		<docker-utils.version>0.0.6</docker-utils.version>
 		<jacoco.version>0.8.12</jacoco.version>
+		<java.version>17</java.version>
 		<json-utils.version>0.0.6</json-utils.version>
+		<lombok-maven-plugin.version>1.18.20.0</lombok-maven-plugin.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<maven-checkstyle-plugin.version>3.4.0</maven-checkstyle-plugin.version>
-		<maven-javadoc-plugin.version>3.7.0</maven-javadoc-plugin.version>
 		<maven.compiler.source>17</maven.compiler.source>
 		<maven.compiler.target>17</maven.compiler.target>
+		<mvn-checkstyle-plugin.version>3.4.0</mvn-checkstyle-plugin.version>
+		<mvn-compiler-plugin.version>3.13.0</mvn-compiler-plugin.version>
+		<mvn-javadoc-plugin.version>3.7.0</mvn-javadoc-plugin.version>
+		<mvn-project-info-reports.version>3.6.2</mvn-project-info-reports.version>
+		<mvn-resources-plugin.version>3.3.1</mvn-resources-plugin.version>
+		<mvn-site-plugin.version>3.12.1</mvn-site-plugin.version>
+		<mvn-source-plugin.version>3.3.1</mvn-source-plugin.version>
+		<site-mvn-plugin.version>0.12</site-mvn-plugin.version>
 		<object-utils.version>0.0.7</object-utils.version>
-		<parent-pom.version>0.2.9</parent-pom.version>
+		<parent-pom.version>0.2.10</parent-pom.version>
 		<project.javadoc.outputdir>./docs/</project.javadoc.outputdir>
 		<sonar.organization>wj-van-hoek</sonar.organization>
 		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
@@ -38,6 +47,8 @@
 			./target/site/jacoco-aggregate/jacoco.xml
 		</sonar.coverage.jacoco.xmlReportPaths>
 		<spring-parent-pom.version>0.1.5</spring-parent-pom.version>
+		<surefire.version>3.3.1</surefire.version>
+		<versions-mvn-plugin.version>2.17.1</versions-mvn-plugin.version>
 	</properties>
 
 	<repositories>
@@ -67,6 +78,7 @@
 				<artifactId>parent-pom</artifactId>
 				<version>${parent-pom.version}</version>
 				<type>pom</type>
+				<scope>import</scope>
 			</dependency>
 			<dependency>
 				<groupId>com.general</groupId>
@@ -94,11 +106,6 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>com.general</groupId>
-			<artifactId>parent-pom</artifactId>
-			<type>pom</type>
-		</dependency>
-		<dependency>
 			<groupId>com.general.utils</groupId>
 			<artifactId>docker-utils</artifactId>
 		</dependency>
@@ -115,6 +122,111 @@
 	<build>
 		<pluginManagement>
 			<plugins>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-site-plugin</artifactId>
+					<version>${mvn-site-plugin.version}</version>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-surefire-plugin</artifactId>
+					<version>${surefire.version}</version>
+				</plugin>
+				<plugin>
+					<groupId>org.jacoco</groupId>
+					<artifactId>jacoco-maven-plugin</artifactId>
+					<version>${jacoco.version}</version>
+					<executions>
+						<execution>
+							<goals>
+								<goal>prepare-agent</goal>
+							</goals>
+						</execution>
+						<execution>
+							<id>report</id>
+							<phase>verify</phase>
+							<goals>
+								<goal>report</goal>
+							</goals>
+						</execution>
+					</executions>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-compiler-plugin</artifactId>
+					<configuration>
+						<source>${java.version}</source>
+						<target>${java.version}</target>
+						<encoding>${project.build.sourceEncoding}</encoding>
+					</configuration>
+					<version>${mvn-compiler-plugin.version}</version>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-source-plugin</artifactId>
+					<version>${mvn-source-plugin.version}</version>
+					<executions>
+						<execution>
+							<id>attach-sources</id>
+							<goals>
+								<goal>jar</goal>
+							</goals>
+						</execution>
+					</executions>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-resources-plugin</artifactId>
+					<version>${mvn-resources-plugin.version}</version>
+					<configuration>
+						<encoding>${project.build.sourceEncoding}</encoding>
+					</configuration>
+				</plugin>
+				<plugin>
+					<groupId>org.codehaus.mojo</groupId>
+					<artifactId>versions-maven-plugin</artifactId>
+					<version>${versions-mvn-plugin.version}</version>
+					<configuration>
+						<ruleSet>
+							<ignoreVersions>
+								<ignoreVersion>
+									<type>regex</type>
+									<version>(?i).*-(alpha|beta|m|rc)(-?\d+)?</version>
+								</ignoreVersion>
+							</ignoreVersions>
+						</ruleSet>
+					</configuration>
+				</plugin>
+				<plugin>
+					<groupId>org.projectlombok</groupId>
+					<artifactId>lombok-maven-plugin</artifactId>
+					<version>${lombok-maven-plugin.version}</version>
+					<executions>
+						<execution>
+							<phase>generate-sources</phase>
+							<goals>
+								<goal>delombok</goal>
+							</goals>
+							<configuration>
+								<addOutputDirectory>false</addOutputDirectory>
+								<sourceDirectory>src/main/java</sourceDirectory>
+								<outputDirectory>
+									${project.build.directory}/delombok
+								</outputDirectory>
+							</configuration>
+						</execution>
+					</executions>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-javadoc-plugin</artifactId>
+					<version>${mvn-javadoc-plugin.version}</version>
+					<configuration>
+						<reportOutputDirectory>${project.javadoc.outputdir}</reportOutputDirectory>
+						<sourcepath>${project.basedir}/src/main/java</sourcepath>
+						<doclint>none</doclint>
+					</configuration>
+				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-checkstyle-plugin</artifactId>
@@ -135,39 +247,14 @@
 						</execution>
 					</executions>
 				</plugin>
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-javadoc-plugin</artifactId>
-					<version>${maven-javadoc-plugin.version}</version>
-					<configuration>
-						<reportOutputDirectory>${project.javadoc.outputdir}</reportOutputDirectory>
-						<sourcepath>${project.basedir}/src/main/java</sourcepath>
-						<doclint>none</doclint>
-					</configuration>
-				</plugin>
-				<plugin>
-					<groupId>org.jacoco</groupId>
-					<artifactId>jacoco-maven-plugin</artifactId>
-					<version>${jacoco.version}</version>
-					<executions>
-						<execution>
-							<goals>
-								<goal>prepare-agent</goal>
-							</goals>
-						</execution>
-						<execution>
-							<id>report</id>
-							<phase>prepare-package</phase>
-							<goals>
-								<goal>report</goal>
-							</goals>
-						</execution>
-					</executions>
-				</plugin>
 			</plugins>
 		</pluginManagement>
 
 		<plugins>
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-checkstyle-plugin</artifactId>
@@ -175,6 +262,10 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.projectlombok</groupId>
+				<artifactId>lombok-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
 	</build>
