--- a/pandora-calculation-utilities/pom.xml
+++ b/pandora-calculation-utilities/pom.xml
@@ -10,15 +10,14 @@
 	<artifactId>pandora-calculation-utilities</artifactId>
 	<name>pandora-calculation-utilities</name>
 
-	<properties>
-		<commons-cli.version>1.8.0</commons-cli.version>
-	</properties>
-
 	<dependencies>
 		<dependency>
 			<groupId>commons-cli</groupId>
 			<artifactId>commons-cli</artifactId>
-			<version>${commons-cli.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>com.general.utils</groupId>
+			<artifactId>json-utils</artifactId>
+		</dependency>		
 	</dependencies>
 </project>
