--- a/pom.xml
+++ b/pom.xml
@@ -59,15 +59,15 @@
 
 	<repositories>
 		<repository>
-			<id>PANDORA_DEV_READ_PACKAGE</id>
+			<id>github-parent-pom</id>
 			<url>https://maven.pkg.github.com/WJ-van-Hoek/parent-pom</url>
 		</repository>
 		<repository>
-			<id>PANDORA_DEV_READ_PACKAGE</id>
+			<id>github-spring-parent-pom</id>
 			<url>https://maven.pkg.github.com/WJ-van-Hoek/spring-parent-pom</url>
 		</repository>
 		<repository>
-			<id>PANDORA_DEV_READ_PACKAGE</id>
+			<id>github-utils</id>
 			<url>https://maven.pkg.github.com/WJ-van-Hoek/utils</url>
 		</repository>
 		<repository>
