PANDORA-355: update checkstyle

--- a/.gitignore
+++ b/.gitignore
@@ -48,11 +48,14 @@ pandora-calculation-repositories/.settings/
 pandora-calculation-rest-api/.settings/
 pandora-calculation-services/.settings/
 pandora-calculation-utilities/.settings/
+pandora-configuration/.settings/
 
 pandora-calculation-repositories/bin/
 pandora-calculation-rest-api/bin/
 pandora-calculation-services/bin/
 pandora-calculation-toolbox/bin/
 pandora-calculation-utilities/bin/
+pandora-configuration/bin/
+pandora-configuration/target/
 
 pandora-calculation-toolbox/.factorypath
