--- a/pandora-calculation-toolbox/pom.xml
+++ b/pandora-calculation-toolbox/pom.xml
@@ -22,5 +22,11 @@
 			<artifactId>pandora-calculation-services</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
+
+		<dependency>
+			<groupId>com.pandora</groupId>
+			<artifactId>pandora-configuration</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 </project>
